{
    "name": "Controls",
    "maps": [
        {
            "name": "Global",
            "id": "74f02d9e-0e43-423c-860d-1277e74aae3d",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "c4871e36-cfda-4937-a16b-433604758935",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MultiAction",
                    "type": "Button",
                    "id": "4462d6b6-b51c-4e5d-b5a2-5e77ee6caaba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9502e87f-844e-4286-a605-aa657c0df129",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "523ff8d0-bb3d-44ba-8505-76ae74339797",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MultiAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AudioSourceController",
            "id": "e12f0570-4466-4ea9-8deb-d847a5110046",
            "actions": [
                {
                    "name": "VolumeDown",
                    "type": "Button",
                    "id": "0c5b448a-98d4-4475-ba96-52b839665974",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeUp",
                    "type": "Button",
                    "id": "d7f7fb73-c3bc-4437-b2af-e3c79c8ee80d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextClip",
                    "type": "Button",
                    "id": "b842223a-e8e0-478f-8223-30f8af34321a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousClip",
                    "type": "Button",
                    "id": "0ca4795a-d8a9-4a37-a51a-d9fc924162fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "3ad4fe9a-cea3-462c-9247-c83dd65e13be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableMove",
                    "type": "Button",
                    "id": "9ae739c2-f809-45d5-bc6f-9decb7cba195",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableHeightAdjustment",
                    "type": "Button",
                    "id": "02f34e00-8042-487b-a2d3-a23d0db83604",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableRotate",
                    "type": "Button",
                    "id": "ee41b9d2-7df8-418d-a268-c1baae05ebdb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a8214ae-b7c3-4cf3-9851-3f2c5bf1b903",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d06f4a77-b9a0-4433-a2c3-1d4119863bb3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bf45582-8e0a-4cb9-9e7a-eacd985f9555",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextClip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7563699f-3b50-435b-ac5c-f7a39d8270b8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousClip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21a1bd53-4e68-4f4c-974a-041ea3443047",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27f376f6-160f-4f9f-bdb7-dc74b74bc174",
                    "path": "<Keyboard>/m",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "EnableMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e0b125e-dc31-4b8d-bd07-63e619eaff24",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "EnableMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3edecff-3f22-46f6-8032-1a179e431f4b",
                    "path": "<Keyboard>/h",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "EnableHeightAdjustment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73eb02b6-d2e4-4bd0-9c8c-278a4459ad19",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "EnableHeightAdjustment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529fb33d-0124-4e75-aa98-ecb5e5a4fc1b",
                    "path": "<Keyboard>/r",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "EnableRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}